--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">TVmaze</string>
+
+    <string name="title_main_activity">TV Shows</string>
+
+    <string name="tvshow_title">TvShow Title or Name</string>
+    <string name="tvshow_rating">4.9</string>
 </resources>
